2009-12-30  Jérôme Laurens  <jerome.laurens@u-bourgogne.fr>

	* synctex_parser_utils.c: in the _synctex_malloc() function,
            memset() is used unconditionally (suggested by J. Kew).
	* synctex_parser_utils.c: in the _synctex_error() function,
            - all 3 instances of OutputDebugString() replaced with OutputDebugStringA()
            such that unicode is ignored (also suggested by J. Kew).
            - _WIN32 flag replaced by SYNCTEX_RECENT_WINDOWS because older windows systems
            may have _WIN32 defined but no OutputDebugString().

2009-12-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c: Remove extern declaration of gettexstring(),
	now in ../web2c/coerce.h.

2009-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	synctex-e-mem.ch0 (just_reverse): Drop unused label found.

2009-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c (synctex_suffix*): Constify strings.
	Add #include "synctex.h" for prototypes.
	* synctex.h (synctexabort): Add prototype.
	* synctex_main.c (synctex_help*): Constify string params.
	(synctex_edit_proceed): Add a prototype (was a duplicate for
	synctex_view_proceed). Drop cast.
	* synctex_parser_utils.[ch] (_synctex_error): Constify string
	param.

2009-09-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: Prepare compiler warnings.

2009-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: SyncTeX now integrated into ../texmfmp.h.
	* synctex-convert.sh (removed): Obsolete.

2009-07-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c: re-#include "web2c/c-auto.h", needed for AIX.

2009-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: remove INSTALL.

2009-07-13  Jerome Laurens  <jerome.laurens@u-bourgogne.fr>

	No need to rebuild the binaries with these changes.
	* INSTALL: the content has no meaning with the new building architecture, file removed.
	* synctex_parser*: version number changed to 1.8